2023-07-24T08:20:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5642496617 # 1018
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
* notice: last 14d: unq all: 4 33
* notice: prev accum: outdated-unq outdated-all / unq all: 546 874 / 573 915
* notice: next accum: outdated-unq outdated-all / unq all: 546 874 / 574 916
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-10 2023-07-24]

2023-07-24T01:22:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5639745173 # 1017
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
* notice: last 14d: unq all: 4 34
* notice: prev accum: outdated-unq outdated-all / unq all: 543 869 / 573 915
* notice: next accum: outdated-unq outdated-all / unq all: 546 874 / 573 915
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -4 -7 / +8 +12 -4 -7 / 4 5
* notice: removed / changed dates: [2023-07-09] / [2023-07-10]

2023-07-23T16:18:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5637451738 # 1016
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-23
* notice: last 14d: unq all: 8 42
* notice: prev accum: outdated-unq outdated-all / unq all: 543 869 / 573 914
* notice: next accum: outdated-unq outdated-all / unq all: 543 869 / 573 915
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -2 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-09 2023-07-23]

2023-07-23T08:17:48Z: