@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-24T08:20:07Z",
+  "timestamp" : "2023-07-24T16:20:07Z",
   "count_outdated" : 874,
   "uniques_outdated" : 546,
-  "count" : 916,
+  "count" : 917,
   "uniques" : 574,
   "clones" : [
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 12 ],
-      "count_decinc": [ 9, 12 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 8 ],
-      "uniques_decinc": [ 5, 8 ]
+      "count": 1,
+      "count_minmax": [ 1, 12 ],
+      "count_decinc": [ 11, 12 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 8 ],
+      "uniques_decinc": [ 7, 8 ]
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
