@@ -1,11 +1,11 @@
 {
-  "count": 33,
-  "uniques": 4,
+  "count": 32,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-07-24T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
