@@ -1,3 +1,12 @@
+2023-07-24T16:20:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5647299778 # 1019
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
+* notice: last 14d: unq all: 3 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 546 874 / 574 916
+* notice: next accum: outdated-unq outdated-all / unq all: 546 874 / 574 917
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -2 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-07-10 2023-07-24]
+
 2023-07-24T08:20:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5642496617 # 1018
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-24
